md files are updated to descirbe API documentation.
Signed-off-by: msvinaykumar <vinakuma@redhat.com>